// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo test cases Render check 1`] = `
<DocumentFragment>
  <header
    class="css-1ybr2v8"
  >
    CourseBox
  </header>
</DocumentFragment>
`;

exports[`Logo test cases Render with custom size 1`] = `
<DocumentFragment>
  <header
    class="css-1234ei9"
    size="10"
  >
    CoursesBox
  </header>
</DocumentFragment>
`;
